Adding default node name and category for when Node Normalizer doesn't return anything.